upgrade bootstrap la bootstrap 5 si fixat dark mode; adaugat favicon; adaugat header is footer la pagina de edit; adaugat buton de "see all" in dashboard

--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,6 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: var(--bg-color, #ffffff);
-    color: var(--text-color, #000000);
-    transition: background-color 0.3s, color 0.3s;
 }
 
 .container {
@@ -44,30 +41,9 @@ body {
     margin-left: auto;
 }
 
-:root.dark {
-    --bg-color: #121212;
-    --text-color: #ffffff;
-}
-
-:root.dark .member-card {
-    background-color: #1e1e1e; /* Un fundal mai închis pentru card */
-    color: #ffffff; /* Text alb */
-    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1); /* Lumina potrivită pentru modul Dark */
-}
-
-:root.dark .jumbotron {
-    background-color: #1e1e1e; /* Un fundal mai închis pentru card */
-    color: #ffffff; /* Text alb */
-    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1); /* Lumina potrivită pentru modul Dark */
-}
-
 .logo-formated{
     width: 10px;
     height: auto;
     min-height: 10px;
     
 }
-
-:root {
-    --bs-primary: plum ; 
-} 
